; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_mv64x60_udbg.c_mv64x60_udbg_getc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/sysdev/extr_mv64x60_udbg.c_mv64x60_udbg_getc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mpsc_base = common dso_local global i64 0, align 8
@MPSC_0_CHR_10_OFFSET = common dso_local global i64 0, align 8
@mpsc_intr_cause = common dso_local global i32 0, align 4
@MPSC_INTR_CAUSE_RCC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mv64x60_udbg_getc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv64x60_udbg_getc() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %7, %0
  %4 = call i32 (...) @mv64x60_udbg_testc()
  %5 = icmp ne i32 %4, 0
  %6 = xor i1 %5, true
  br i1 %6, label %7, label %8

7:                                                ; preds = %3
  br label %3

8:                                                ; preds = %3
  %9 = load i64, i64* @mpsc_base, align 8
  %10 = load i64, i64* @MPSC_0_CHR_10_OFFSET, align 8
  %11 = add nsw i64 %9, %10
  %12 = add nsw i64 %11, 2
  %13 = call i32 @in_8(i64 %12)
  store i32 %13, i32* %2, align 4
  %14 = load i64, i64* @mpsc_base, align 8
  %15 = load i64, i64* @MPSC_0_CHR_10_OFFSET, align 8
  %16 = add nsw i64 %14, %15
  %17 = add nsw i64 %16, 2
  %18 = load i32, i32* %2, align 4
  %19 = call i32 @out_8(i64 %17, i32 %18)
  %20 = load i32, i32* @mpsc_intr_cause, align 4
  %21 = load i32, i32* %1, align 4
  %22 = load i32, i32* @MPSC_INTR_CAUSE_RCC, align 4
  %23 = xor i32 %22, -1
  %24 = and i32 %21, %23
  %25 = call i32 @out_le32(i32 %20, i32 %24)
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @mv64x60_udbg_testc(...) #1

declare dso_local i32 @in_8(i64) #1

declare dso_local i32 @out_8(i64, i32) #1

declare dso_local i32 @out_le32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
